fix: get rid of horizontal scroll

--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -1,5 +1,6 @@
 @import "@/assets/styles/fonts.css";
 @import "@/assets/styles/variables.css";
+@import "@/assets/styles/scrollbar.css";
 
 *,
 *::before,
@@ -7,22 +8,6 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
-
-::-webkit-scrollbar {
-  border-radius: 0px 10px 10px 0px;
-  width: 10px;
-  margin-block: 10px;
-  background: #ffffff;
-}
-
-::-webkit-scrollbar-track {
-  width: 10px;
-  background-color: var(--background-semi-dark);
-}
-
-::-webkit-scrollbar-thumb {
-  background: var(--background-light);
 }
 
 body {
